# MINX

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE-Header  LICENSE.md  MAKEFILE  MINX.sln  README.md  configure  configure.sh  deps.lst  doxygen.conf  index.html  makefile  params.json
.nuget/: packages.config
FreeType/include/: ft2build.h
MINX/: MINX.vcxproj  MINX.vcxproj.filters  packages.config
MINX/Debug/: CL.read.1.tlog  CL.write.1.tlog  MINX.lastbuildstate  MINX.write.1.tlog  cl.command.1.tlog  vc100.idb
Monsters-game/: Monsters-game.sln  makefile
Monsters-game/Monsters-game/: Monsters-game.vcxproj  Monsters-game.vcxproj.filters
Monsters-game/src/: Bouncer.cpp  Bouncer.h  Monster.cpp  Monster.h  Monsters.cpp  Monsters.h  PatternMonster.cpp  PatternMonster.h  Program.cpp  RandomMonster.cpp  Wrapper.h  (+3 more)
buildProject/: buildProject.sh  template.cpp  template.h
headers/: MINX.h  MINX_Audio.h  MINX_Graphics.h  MINX_Input.h
include/: .gitignore
licenses/: GLEW  GLFW  libstemgamepad
src/: API.h  Color.cpp  Color.h  Content.cpp  Content.h  DrawableGameComponent.cpp  DrawableGameComponent.h  Event.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  Game.hpp  GameComponent.cpp  GameComponent.h  GameComponent.hpp  GameTime.cpp  GameTime.h  GameTime.hpp  IGameComponent.h  MINX.h  MINX_Everything.h  MINX_Graphics.h  MINX_Input.h  MathHelper.cpp  MathHelper.h  MathHelper.hpp  Matrix4x4.cpp  Matrix4x4.h  Point.cpp  Point.h  Ray2.cpp  Ray2.h  Rectangle.cpp  Rectangle.h  Rectangle.hpp  Text2D.cpp  Thread.cpp  Thread.h  Vector2.cpp  (+2 more)
test_project/: Program.cpp  make.sh  test.cpp  test.h  test.pgrm
(+139 files in other folders)
